# surreal-docs

./: CMakeLists.txt  README.md  conanfile.py  gcbuildallplatforms.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
exec/: CMakeLists.txt  main.cpp
installer/: installer.nsi
module_base/include/udocs-processor/doctree/blueprints/: BlueprintClassNode.h
module_cli/: CMakeLists.txt
module_cli/cli/: SSLInitializer.cpp  SurDocsCLI.cpp
module_cli/cli/cli/: AuthCLI.cpp  GenerateCLI.cpp  InitCLI.cpp  MigrateCLI.cpp  OrganizationCreateCLI.cpp  OrganizationDeleteCLI.cpp  OrganizationListCLI.cpp  ProjectAnnounceCLI.cpp  ProjectCollaboratorAddCLI.cpp  ProjectCollaboratorDeleteCLI.cpp  ProjectCollaboratorListCLI.cpp  ProjectCreateCLI.cpp  ProjectDeleteCLI.cpp  ProjectListCLI.cpp  ProjectPublishCLI.cpp  QuotaListCLI.cpp  TokenCreateCLI.cpp  TokenListCLI.cpp
module_cli/cli/cli/token/: TokenLoader.cpp
module_cli/cli/cli/util/: CliHelper.cpp
module_cli/cli/commands/: AuthCommand.cpp  GenerateCommand.cpp  InitCommand.cpp  MigrateCommand.cpp  OrganizationCreateCommand.cpp  OrganizationDeleteCommand.cpp  OrganizationListCommand.cpp  ProjectAnnounceCommand.cpp  ProjectCollaboratorAddCommand.cpp  ProjectCollaboratorDeleteCommand.cpp  ProjectCollaboratorListCommand.cpp  ProjectCreateCommand.cpp  ProjectDeleteCommand.cpp  ProjectListCommand.cpp  ProjectPublishCommand.cpp  QuotaListCommand.cpp  TokenCreateCommand.cpp  TokenListCommand.cpp
module_cli/cli/commands/generate/: Generator.cpp
module_cli/cli/commands/oauth2/: HydraOAuth2.cpp
module_cli/cli/commands/security/: WindowsVault.cpp
module_cli/cli/version/: AdsManager.cpp  DefaultAds.cpp  grpcProductService.cpp
module_cli/cli/views/: FtxAuthView.cpp  FtxGenerateView.cpp  FtxInitView.cpp  FtxMigrateView.cpp  FtxOrganizationCreateView.cpp  FtxOrganizationDeleteView.cpp  FtxOrganizationListView.cpp  FtxProjectAnnounceView.cpp  FtxProjectCollaboratorAddView.cpp  FtxProjectCollaboratorDeleteView.cpp  FtxProjectCollaboratorListView.cpp  FtxProjectCreateView.cpp  FtxProjectDeleteView.cpp  FtxProjectListView.cpp  FtxProjectPublishView.cpp  FtxQuotaListView.cpp  FtxSimpleView.cpp  FtxTokenCreateView.cpp  FtxTokenListView.cpp  FtxView.cpp  GenerateView.cpp
module_cli/include/: SSLInitializer.h
module_cli/include/udocs-processor/cli/: StandardInputReader.h  SurDocsCLI.h
module_cli/include/udocs-processor/cli/cli/: AuthCLI.h  GenerateCLI.h  InitCLI.h  MigrateCLI.h  OrganizationCreateCLI.h  OrganizationDeleteCLI.h  OrganizationListCLI.h  ProjectAnnounceCLI.h  ProjectCollaboratorAddCLI.h  ProjectCollaboratorDeleteCLI.h  ProjectCollaboratorListCLI.h  ProjectCreateCLI.h  ProjectDeleteCLI.h  ProjectListCLI.h  ProjectPublishCLI.h  QuotaListCLI.h  TokenCreateCLI.h  TokenListCLI.h
module_cli/include/udocs-processor/cli/cli/token/: TokenLoader.h
module_cli/include/udocs-processor/cli/cli/util/: CliHelper.h
module_cli/include/udocs-processor/cli/commands/: AuthCommand.h  GenerateCommand.h  InitCommand.h  MigrateCommand.h  OrganizationCreateCommand.h  OrganizationDeleteCommand.h  OrganizationListCommand.h  ProjectAnnounceCommand.h  ProjectCollaboratorAddCommand.h  ProjectCollaboratorDeleteCommand.h  ProjectCollaboratorListCommand.h  ProjectCreateCommand.h  ProjectDeleteCommand.h  ProjectListCommand.h  ProjectPublishCommand.h  QuotaListCommand.h  TokenCreateCommand.h  TokenListCommand.h
module_cli/include/udocs-processor/cli/commands/generate/: Generator.h
module_cli/include/udocs-processor/cli/commands/oauth2/: HydraOAuth2.h  OAuth2.h
module_cli/include/udocs-processor/cli/commands/security/: Vault.h  WindowsVault.h
module_cli/include/udocs-processor/cli/version/: AdsManager.h  DefaultAds.h  ProductService.h  grpcProductService.h
module_cli/include/udocs-processor/cli/views/: AuthView.h  FtxAuthView.h  FtxGenerateView.h  FtxInitView.h  FtxMigrateView.h  FtxOrganizationCreateView.h  FtxOrganizationDeleteView.h  FtxOrganizationListView.h  FtxProjectAnnounceView.h  FtxProjectCollaboratorAddView.h  FtxProjectCollaboratorDeleteView.h  FtxProjectCollaboratorListView.h  FtxProjectCreateView.h  FtxProjectDeleteView.h  FtxProjectListView.h  FtxProjectPublishView.h  FtxQuotaListView.h  FtxSimpleView.h  FtxTokenCreateView.h  FtxTokenListView.h  FtxView.h  GenerateView.h  InitView.h  MigrateView.h  NonInteractiveGenerateView.h  OrganizationCreateView.h  OrganizationDeleteView.h  OrganizationListView.h  ProjectAnnounceView.h  ProjectCollaboratorAddView.h  ProjectCollaboratorDeleteView.h  ProjectCollaboratorListView.h  ProjectCreateView.h  ProjectDeleteView.h  ProjectListView.h  ProjectPublishView.h  QuotaListView.h  SimpleView.h  TokenCreateView.h  TokenListView.h  (+1 more)
module_cloud/: CMakeLists.txt
module_cloud/grpc/: grpc.cpp  grpcHelper.cpp
module_cloud/include/udocs-processor/: Scopes.h
module_cloud/include/udocs-processor/grpc/: grpc.h  grpcHelper.h
module_cloud/include/udocs-processor/services/: DocumentService.h  DocumentServiceFactory.h  OrganizationService.h  ProjectService.h  QuotaService.h  TokenService.h
module_cloud/include/udocs-processor/services/impl/: DocumentServiceFactoryImpl.h  DocumentServiceImpl.h  OrganizationServiceImpl.h  ProjectServiceImpl.h  QuotaServiceImpl.h  TokenServiceImpl.h
module_cloud/services/impl/: DocumentServiceFactoryImpl.cpp  DocumentServiceImpl.cpp  OrganizationServiceImpl.cpp  ProjectServiceImpl.cpp  QuotaServiceImpl.cpp  TokenServiceImpl.cpp
module_processor/include/udocs-processor/: version.h
module_processor/include/udocs-processor/subprocessors/: ComplementFinder.h  DocPathBuilder.h
module_processor/include/udocs-processor/treeloaders/: UDataTreeLoader.h
module_serializer/: CMakeLists.txt
module_serializer/include/udocs-processor/serializers/: HTMLDocTreeSerializer.h  JSONDocTreeSerializer.h
module_util/: CMakeLists.txt  ExecStreamHelper.cpp  StringHelper.cpp
module_util/include/udocs-processor/: ExecStreamHelper.h  StringHelper.h
res/html/udocs_processor/: oauth2_callback.html
res/misc/other/udocs_processor/: settings.json
(+4 files in other folders)
